@@ -30,6 +30,7 @@ import org.joml.Matrix4fStack;
 import org.joml.Vector3f;
 import org.joml.Vector4f;
 import org.overrun.glutils.gl.GLProgram;
+import org.overrun.glutils.gl.MipmapMode;
 import org.overrun.glutils.gl.Textures;
 import org.overrun.glutils.gui.DrawableText;
 import org.overrun.glutils.gui.FontTexture;
@@ -47,7 +48,7 @@ import java.nio.charset.StandardCharsets;
 import static org.lwjgl.opengl.GL15.*;
 import static org.overrun.glutest.GLUTest.fps;
 import static org.overrun.glutils.LinesReader.lines;
-import static org.overrun.glutils.game.GLStateManager.*;
+import static org.overrun.glutils.gl.GLStateManager.*;
 import static org.overrun.glutils.math.Transform.*;
 
 /**
@@ -112,7 +113,9 @@ public class GameRenderer {
         crossing = MeshLoader.load3(cl,
                 "crossing.mesh",
                 m -> m.vertIdx(0).colorIdx(1).texIdx(2))
-            .texture(Textures.loadAWT(cl, "crossing.png", GL_NEAREST));
+            .texture(Textures.loadAWT(cl,
+                "crossing.png",
+                MipmapMode.glNearest()));
         text = new Mesh3()
             .vertUsage(GL_DYNAMIC_DRAW)
             .vertIdx(0)
